[package]
name = "quantum2"
version = "0.1.3"
authors = ["Ben Eills <ben@beneills.com>", "Issac Trotts <issac.trotts@gmail.com>"]
repository = "https://github.com/ijt/quantum2.git"
homepage = "https://github.com/ijt/quantum2/"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/quantum2"
description = "Advanced Rust quantum computer simulator, forked from \"quantum\"."

[features]
optimize = []

[dependencies]
float-cmp = "0.2.2"
rand = "0.3"
